k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sortarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sortarr
  template:
    metadata:
      labels:
        app: sortarr
    spec:
      containers:
        - name: sortarr
          image: docker.io/bateau/sortarr:v2.20.7
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /data
              name: config
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - hostPath:
            path: /data/disk2/opt/sortarr
            type: ""
          name: config
