k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sortarr
  namespace: seashell
spec:
  type: ClusterIP
  selector:
    app: sortarr
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
